--- a/src/MorpheusPoc/Views/Shared/_Layout.cshtml
+++ b/src/MorpheusPoc/Views/Shared/_Layout.cshtml
@@ -22,6 +22,9 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                 </ul>
+                <ul class="nav navbar-nav">
+                    <li>@Html.ActionLink("Home", "MeshCall", "Home")</li>
+                </ul>
             </div>
         </div>
     </div>
